samples/_failures_safe/1761510518_2a06fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a14bde6.c: In function ‘main’:
./samples/SAFE/__tmp_5a14bde6.c:132:5: error: expected expression at end of input
  132 |     } else
      |     ^
./samples/SAFE/__tmp_5a14bde6.c:132:5: error: expected declaration or statement at end of input
